# orange3-canvasagent

./: .gitignore  LICENSE  MANIFEST.in  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: installer-user-guide.md  release-checklist.md  roadmap.md
installer/: CanvasAgentSetup.spec  __init__.py  __main__.py  core.py  gui.py
orangecontrib/canvasagent/: __init__.py  backend.py  canvas.py  codex_backend.py  commit.py  oauth.py  schema.py  setup_status.py
orangecontrib/canvasagent/widgets/: OWCanvasAgent.py  __init__.py
scripts/: build-installer.ps1  build-wheel.ps1
tests/: fakes.py  test_backend.py  test_canvas_executor.py  test_commit.py  test_installer_detection.py  test_installer_gui.py  test_packaging.py  test_rich_widget_ui.py  test_schema.py  test_setup_status.py  test_widget_import.py
