[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Orange3-CanvasAgent"
version = "0.1.0"
description = "An Orange3 canvas agent widget with reversible AI commits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Orange3>=3.40,<3.41",
    "keyring>=25",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Orange",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
llm = [
    "litellm!=1.82.7,!=1.82.8,>=1.83.14,<1.84",
]
test = []

[project.entry-points."orange.widgets"]
"Canvas Agent" = "orangecontrib.canvasagent.widgets"

[tool.setuptools.packages.find]
include = ["orangecontrib*"]
namespaces = true

[tool.setuptools.package-data]
"orangecontrib.canvasagent" = ["icons/*.svg"]
