[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Orange3-CanvasAgent"
version = "0.1.1"
description = "An Orange3 canvas agent widget with reversible AI commits."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "pantagram1031", email = "pantagram1031@gmail.com" },
]
keywords = ["orange3", "codex", "llm", "canvas", "agent", "data-mining"]
dependencies = [
    "Orange3>=3.40,<3.41",
    "PyQt5>=5.15,<6",
    "keyring>=25",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Orange",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/pantagram1031/orange3-canvasagent"
Repository = "https://github.com/pantagram1031/orange3-canvasagent"
Issues = "https://github.com/pantagram1031/orange3-canvasagent/issues"

[project.optional-dependencies]
llm = [
    "litellm!=1.82.7,!=1.82.8,>=1.83.14,<1.84",
]
test = []
dev = [
    "build>=1.2",
    "pyinstaller>=6.0",
]

[project.entry-points."orange.widgets"]
"Canvas Agent" = "orangecontrib.canvasagent.widgets"

[tool.setuptools.packages.find]
include = ["orangecontrib*"]
namespaces = true

[tool.setuptools.package-data]
"orangecontrib.canvasagent" = ["icons/*.svg"]
